# Pantheon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/en/: architecture.md  index.md  personas.md  quickstart.md  reference.md
docs/zh/: architecture.md  calibration.md  index.md  mcp.md  personas.md  quickstart.md  reference.md
examples/: 01_quickstart.py  02_streaming.py  03_relay_mode.py  04_model_swap.py  05_replay.py
golden_debates/: 01_indie_startup.yaml  02_face_grief.yaml  03_reform_or_revolution.yaml  README.md
