[project]
name = "pantheon-workspace"
version = "0.0.0"
description = "Pantheon monorepo workspace root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/pantheon-core/tests",
    "packages/pantheon-pack-founders/tests",
]
